--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -15,7 +15,7 @@
     </header>
     <footer>
       <p>
-        Alx SoftwareEngineering
+        Best School
       </p>
     </footer>
   </body>
